# opensessionlog

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: connector_bug.md  feature_request.md  format_support.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  hermes-connector-exploration.md
examples/embed-providers/: README.md  llamafile.sh  openai.sh  sentence-transformers.py
src/: autostart.rs  cli.rs  db.rs  discover.rs  embed.rs  error.rs  export.rs  ids.rs  ingest.rs  lib.rs  main.rs  model.rs  project.rs  recency.rs  report.rs  schema.sql  search.rs  setup.rs  vec.rs  watch.rs
src/connector/: claude.rs  codex.rs  copilot.rs  hermes.rs  mod.rs  opencode.rs  probe.rs  reader.rs  sqlite.rs  walk.rs
tests/: cli_autostart_test.rs  cli_recency_test.rs  cli_setup_test.rs  cli_test.rs  connector_claude_test.rs  connector_codex_test.rs  connector_copilot_test.rs  connector_hermes_test.rs  connector_opencode_test.rs  embed_test.rs  export_test.rs  grep_test.rs  ingest_idempotency_test.rs  recency_test.rs  report_test.rs  schema_test.rs  search_semantic_test.rs  similar_test.rs  watch_test.rs
tests/fixtures/claude/: minimal.jsonl  multi_tool.jsonl  system_and_compact.jsonl  task_tool_array_result.jsonl  thinking.jsonl  unknown_fields.jsonl  with_tool_call.jsonl
tests/fixtures/codex/: mcp_tool_from_event_msg.jsonl  minimal.jsonl  unknown_events.jsonl  with_reasoning.jsonl  with_subagent_link.jsonl  with_token_count.jsonl  with_tool_call.jsonl
(+10 files in other folders)
