[package]
name = "opensessionlog"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "osl"
path = "src/lib.rs"

[[bin]]
name = "osl"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v5", "serde"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
